--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "pylint_report"
 description = "Generates an html report summarizing the results of pylint."
 readme = "README.rst"
 requires-python = ">=3.8"
-dependencies = ["pylint", "Jinja2", "pandas", "argcomplete"]
+dependencies = ["pylint", "Jinja2==3.1.2", "pandas==1.5.2", "argcomplete"]
 dynamic = ["version"]
 
 [[project.authors]]
@@ -18,7 +18,7 @@ email = "mail.mitko@gmail.com"
 text = "Apache 2.0"
 
 [project.optional-dependencies]
-test = ["pytest", "coverage", "pytest-reportlog"]
+test = ["pytest", "coverage", "pytest-reportlog", "pytest-html"]
 docs = [
     "Sphinx",
     "sphinx-rtd-theme",
