--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       # remove .htmlcov/.gitignore otherwise not pushed to gh-pages branch
       - name: generate sphinx docs
         run: |
-          git describe --tags
+          git describe --always
           make install-local
-          git describe --tags
+          git describe --always
           . .venv/bin/activate && make docs
-          git describe --tags
+          git describe --always
           touch docs/sphinx/build/html/.nojekyll
           rm docs/sphinx/build/html/.htmlcov/.gitignore
 
