--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ description = "Generates an html report summarizing the results of pylint."
 readme = "README.rst"
 requires-python = ">=3.8"
 
-# fix numpy version (see https://stackoverflow.com/a/78641304)
-dependencies = ["pylint", "Jinja2==3.1.4", "numpy==1.26.4", "pandas==1.5.2", "argcomplete"]
+dependencies = ["pylint", "Jinja2", "pandas", "argcomplete"]
 dynamic = ["version"]
 
 [[project.authors]]
